# controlguard

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  control_request.yml  feature_request.yml
.github/workflows/: ci.yml
config/: lab-profile.json
config/profiles/: entra-admin-mfa.json  linux-server.json  okta-admin-mfa.json  web-application.json  windows-workstation.json
controlguard/: __init__.py  cli.py  comparison.py  engine.py  loaders.py  models.py  profiles.py  reporting.py  runtime.py  validation.py
controlguard/checks/: __init__.py  graph.py  linux.py  manual.py  network.py  okta.py  web.py  windows.py
controlguard/connectors/: __init__.py  microsoft_graph.py  okta.py
docs/: ARCHITECTURE.md  RELEASE_NOTES_v0.1.0.md
scripts/: generate_sample_reports.py
tests/: test_engine.py
